--- a/bottlerocket-settings-models/settings-extensions/kubelet-device-plugins/Cargo.toml
+++ b/bottlerocket-settings-models/settings-extensions/kubelet-device-plugins/Cargo.toml
@@ -14,5 +14,8 @@ env_logger.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 
+[dev-dependencies]
+bounded-integer = { workspace = true, features = ["types"]}
+
 [lints]
 workspace = true
