chore(cargo-deny): update license exceptions list

--- a/deny.toml
+++ b/deny.toml
@@ -20,7 +20,7 @@ allow = [
 
 exceptions = [
     { name = "generational-arena", allow = ["MPL-2.0"] },
-    { name = "unicode-ident", allow = ["MIT", "Apache-2.0", "Unicode-DFS-2016"] },
+    { name = "unicode-ident", allow = ["MIT", "Apache-2.0", "Unicode-3.0"] },
     { name = "icu_collections", allow = ["Unicode-3.0"] },
     { name = "icu_locid", allow = ["Unicode-3.0"] },
     { name = "icu_locid_transform", allow = ["Unicode-3.0"] },
